k8s/allow-dns.yaml
# k8s/allow-dns.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-dns
  namespace: sa-p5
spec:
  podSelector: {}               # aplica a todos los pods del ns
  policyTypes: ["Egress"]
  egress:
    # 1) NodeLocalDNS en cada nodo
    - to:
        - ipBlock:
            cidr: 169.254.25.10/32
      ports:
        - { protocol: UDP, port: 53 }
        - { protocol: TCP, port: 53 }
    # 2) CoreDNS (por si un pod usa el ClusterIP directamente)
    - to:
        - namespaceSelector:
            matchLabels:
              kubernetes.io/metadata.name: kube-system
          podSelector:
            matchLabels:
              k8s-app: kube-dns
      ports:
        - { protocol: UDP, port: 53 }
        - { protocol: TCP, port: 53 }
