k8s/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: sa-p5
  labels:
    app.kubernetes.io/name: sa-p5
    app.kubernetes.io/part-of: sa-p5
    app.kubernetes.io/managed-by: kubectl
    environment: local
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: default-deny
  namespace: sa-p5
spec:
  podSelector: {}
  policyTypes: ["Ingress","Egress"]
