k8s/np-allow-egress-from-tester-to-gateway.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-from-tester-to-gateway
  namespace: sa-p5
spec:
  podSelector:
    matchLabels:
      role: tester
  policyTypes: ["Egress"]
  egress:
    - to:
        - podSelector:
            matchLabels:
              app: gateway
      ports:
        - protocol: TCP
          port: 4001
